service-a/service-service-a.yml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: default
spec:
  ports:
  - port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    run: service-a
  type: NodePort
