service-a/ingress-service-a.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  defaultBackend:
    service:
      name: service-a
      port:
        number: 8888
